--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Hello GIT</title>
+        <link rel="stylesheet" href="/new_repository/CSS/style.css">
     </head>
     <body>
-        
+
     </body>
 </html>
